first part of images project

--- a/src/main/webapp/css/user-page.css
+++ b/src/main/webapp/css/user-page.css
@@ -45,3 +45,10 @@
 .hidden {
   display: none;
 }
+
+/* Makes sure the image does not overflow */
+.message-body img {
+  display: block;
+  margin-top: 25px;
+  max-width: 75%;
+}
