--- a/src/main/webapp/css/user-page.css
+++ b/src/main/webapp/css/user-page.css
@@ -13,42 +13,74 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+body {
+ margin: 0;
+ background: linear-gradient(white, #ccccff) fixed;
+ font-family: sans-serif;
+}
 
-/* Set the size of the message input to be 100 pixels high
-   and will fill the width of its parent element. */
+nav {
+ background-color: #ccccff;
+ font-size: 18pt;
+ padding: 10px;
+}
+
+nav a {
+ color: black;
+ margin-right: 10px;
+}
+
+h2 {
+ margin: 0;
+}
+
+input[type=submit] {
+ background-color: #ccccff;
+ height: 50px;
+ width: 100px;
+ font-size: 14pt;
+}
+
+#content {
+ max-width: 600px;
+ margin-left: auto;
+ margin-right: auto;
+}
+
+
 #message-input {
-  height: 100px;
-  width: 100%;
+ height: 100px;
+ width: 99%;
 }
 
-/* Give each message a rounded border. */
-.message-div {
-  border: thin solid black;
-  border-radius: 5px;
-  margin-top: 20px;
-}
-
-/* Add a bottom border to the message header. */
 .message-header {
-  border-bottom: thin solid black;
-  padding: 5px;
+ border-bottom: thin solid black;
+ background-image: linear-gradient(to right, white , #ccccff);
 }
 
-/* Give the message body a margin so the text
-   isn't too close to the border. */
 .message-body {
-  margin: 5px;
+ font: 12pt cursive;
 }
 
-/* Use this to hide certain elements like forms if the
-   user is not logged in or viewing their own page. */
+.panel {
+ background-color: white;
+ margin-top: 20px;
+}
+
+.centered{
+ text-align: center;
+}
+
+.padded {
+ padding: 10px;
+}
+
+.rounded {
+ border: thin solid black;
+ border-radius: 5px;
+ overflow: hidden;
+}
+
 .hidden {
-  display: none;
-}
-
-/* Makes sure the image does not overflow */
-.message-body img {
-  display: block;
-  margin-top: 25px;
-  max-width: 75%;
+ display: none;
 }
