--- a/src/main/webapp/css/facilitiesmap.css
+++ b/src/main/webapp/css/facilitiesmap.css
@@ -1,11 +1,8 @@
- /*
-Description: CSS file corresponding to facilitiesmaps.html page
-Author: Anna Kawakami
-Created: 03/20/19
-Last Updated: 03/20/19
+/*
+Description: javascript file corresponding to user-maps.html
+Author: Anna Kawakami 
+Created: 03/24/19
+Last Updated: 03/24/19
 */
 
-#map{
-    width: 500px;
-    height: 500px;
-  }
+let map;
