--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -31,6 +31,13 @@ nav ul {
 }
 
 nav li {
-  display: inline-block;
-  margin-right: 10px
+  float: left;
+}
+
+nav li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
