--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -54,3 +54,11 @@ nav li a:hover:not(.active) {
   position: relative;
   z-index: 2;
 }
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
