Fix[navbar]: Make elems added through js work

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -48,6 +48,10 @@ nav li a:hover:not(.active) {
   z-index: 1;
 }
 
+.navRight {
+  float: right;
+}
+
 .active {
   background-color: #FF4C70;
   box-shadow: 2px 4px 4px grey;
