--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -78,3 +78,8 @@ nav li a:hover:not(.active) {
   font-size: 40px;
   text-align: center;
 }
+
+.pageDescriptionSmall {
+  font-size: 25px;
+  text-align: center;
+}
