--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -67,3 +67,19 @@ nav li a:hover:not(.active) {
     clear: both;
     visibility: hidden;
 }
+
+.pageTitle {
+  font-size: 70px;
+  text-align: center;
+  color: #FF7F99;
+}
+
+.pageDescription {
+  font-size: 40px;
+  text-align: center;
+}
+
+.pageDescriptionSmall {
+  font-size: 25px;
+  text-align: center;
+}
