--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -20,6 +20,29 @@ body {
  background-color: #F4F4F4;
 }
 
+.doggy-background {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+}
+
+.doggy-background::after {
+  content: "";
+  opacity: 0.4;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+  background-image: url("https://i.ibb.co/N3G7byy/doggy-background.png");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-attachment: fixed;
+  background-size: contain;
+}
+
 nav ul {
   list-style-type: none;
   margin: 0;
