Feat[profile]: Beautify languages

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -20,6 +20,14 @@ body {
  background-color: #F4F4F4;
 }
 
+.languages {
+  display:inline-block;
+}
+
+.language {
+  color: pink;
+}
+
 .doggy-background {
   width: 100%;
   height: 100%;
