Add style to profile (#88)
* Fix[user-page-loader]: Modify call to image upload

* Feat[user-page]: Style profile

* Feat[post]: Fit images added through http in post

* Feat[profile]: Add scrollbar to posts

* Chore[user-page.html]: Remove unnecessary classes

* Feat[profile]: Divide page in two

* Feat[profile]: Beautify languages

--- a/src/main/webapp/css/post.css
+++ b/src/main/webapp/css/post.css
@@ -1,3 +1,27 @@
+img {
+  width: 100%;
+}
+
+.align-right {
+
+}
+
+.profile-posts-container {
+  overflow-y: scroll;
+  height: 1200px;
+  width: 60%;
+}
+
+.profile-divider {
+  width: 100%;
+  display:inline-flex;
+}
+
+.user-info {
+  float:left;
+  width: 40%;
+}
+
 .post {
   height: auto;
   width: 500px;
@@ -8,6 +32,7 @@
   padding: 3% 3% 3% 3%;
   margin: auto;
   margin-bottom: 3%;
+  top: 10px;
 }
 
 .post-profile {
