Feat[profile]: Change profile img size

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -28,6 +28,11 @@ body {
   color: pink;
 }
 
+.profile-img {
+  width: 200px;
+  height: auto;
+}
+
 .doggy-background {
   width: 100%;
   height: 100%;
